WIP - Main page

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -110,3 +110,17 @@ input {
   margin: 5px;
   margin-bottom: 10px;
 }
+
+
+/* Utility Classes */
+.align-content-right {
+  align-content: end;
+}
+
+.m-t-n {
+  margin-top: 0;
+}
+
+.m-t-b {
+  margin-bottom: 0;
+}
