--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -11,6 +11,7 @@
 
 .nav-container {
   background-color: #1c1d25 !important;
+  box-shadow: none !important;
 }
 
 .nav a {
@@ -43,5 +44,10 @@
 
 .navLink:hover {
   background-color: #008183;
+}
+
+.logo-size {
+  height: 3rem;
+  /* position: relative; */
 }
 
