WIP About Section

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -169,8 +169,16 @@ input {
   justify-content: center;
 }
 
+.justify-content-spa {
+  justify-content: space-around;
+}
+
 .text-center {
   text-align: center;
+}
+
+.text-bold {
+  font-weight: bold;
 }
 
 .page-section {
