--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -121,8 +121,20 @@ input {
   margin-top: 0;
 }
 
+.m-t-lg {
+  margin-top: 1rem;
+}
+
 .m-b-n {
   margin-bottom: 0;
+}
+
+.m-r-lg {
+  margin-right: 1rem;
+}
+
+.m-l-lg {
+  margin-left: 1rem;
 }
 
 .p-t-n {
@@ -143,6 +155,10 @@ input {
 
 .p-l-s {
   padding-left: .25rem;
+}
+
+.p-l-lg{
+  padding-right: 1rem;
 }
 
 .p-r-s {
@@ -200,3 +216,31 @@ input {
 .overflow-hidden {
   overflow: hidden;
 }
+
+.icon {
+  height: 50px;
+}
+
+/* Buttons */
+
+.project-btn {
+  flex-grow: 1;
+  width: 2rem;
+  padding: .25rem 0;
+  border-radius: 5px;
+  /* border: none; */
+}
+
+/* Project Images */
+
+.project-img {
+
+}
+
+.project-img:hover {
+  transform: scale(1.025);
+  transition: calc(.5s);
+  background-color: rgba(76, 75, 75, .5);
+  z-index: 100;
+}
+
