--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -46,3 +46,13 @@
     border-radius: 10px;
 
 } */
+
+.bg-radius {
+    border-top-left-radius: 600px;
+    border-bottom-right-radius: 600px;
+    border-top-right-radius: 50px;
+}
+
+.project-img-container-bs {
+    box-shadow: rgba(10, 10, 26, 0.552) 0px 7px 29px 0px;
+}
