--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -148,8 +148,16 @@ input {
   padding-top: 0;
 }
 
+.p-t-lg {
+  padding-top: 1rem;
+}
+
 .p-b-n {
   padding-bottom: 0;
+}
+
+.p-b-lg {
+  padding-bottom: 1rem;
 }
 
 .p-b-m {
@@ -232,9 +240,20 @@ input {
 .project-btn {
   flex-grow: 1;
   width: 2rem;
-  padding: .25rem 0;
+  padding: .5rem 0;
   border-radius: 5px;
+  font-weight: bolder;
+  color: white;
+  background-color: #1c1d25;
+  /* border-color: #fff; */
+  cursor: pointer;
+  box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em, rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
   /* border: none; */
+}
+
+.project-btn:hover {
+  box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.2=5em, rgba(90, 125, 188, 0.05) 0px 0.5em 1em;
+  text-decoration: underline;
 }
 
 /* Project Images */
@@ -244,4 +263,11 @@ hr {
   border-color: #1c1d25;
 }
 
+.link-style {
+  color: white;
+}
+
+.link-style:hover {
+  color: #00acb0;
+}
 
