--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -106,6 +106,7 @@ Grid
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  opacity: 0.1;
   /* padding: 6rem 0 7rem 0; */
 }
 
